--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
 .App {
   text-align: center;
+
+  background: #dbe6f6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #dbe6f6, #c5796d); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #dbe6f6, #c5796d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ width: 1530px;
+  height: 740px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+body {
+ 
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.image{
+  margin-left: 950px;
+  margin-top: -320px; 
+    border-radius: 10px;
+ transition: border-radius 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.image:hover{
+   border-radius: 30px;
+  background: #c28d8d;
+  box-shadow: 15px 15px 30px #926f6f,
+  -15px -15px 30px #be8f8f;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+
+.container{
+margin-top: 250px;
+font-family: cursive;
+font-style: oblique;
+display: block;
+justify-content: space-around;
+}
+.titre{
+  margin-top: 30px;
+}
+.proff{
+ margin-top: 20px;
+}
+.biog{
+ margin-top: 20px;  
+}
+button {
+ font-size: 18px;
+ display: inline-block;
+ outline: 0;
+ border: 0;
+ cursor: pointer;
+ will-change: box-shadow,transform;
+ background: radial-gradient( 100% 100% at 100% 0%, #89E5FF 0%, #8567c4 100% );
+ box-shadow: 0px 0.01em 0.01em rgb(45 35 66 / 40%), 0px 0.3em 0.7em -0.01em rgb(45 35 66 / 30%), inset 0px -0.01em 0px rgb(58 65 111 / 50%);
+ padding: 0 2em;
+ border-radius: 15px;
+ color: #fff;
+ height: 2.6em;
+ text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
+ transition: box-shadow 0.15s ease, transform 0.15s ease;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+ box-shadow: 0px 0.1em 0.2em rgb(45 35 66 / 40%), 0px 0.4em 0.7em -0.1em rgb(45 35 66 / 30%), inset 0px -0.1em 0px #3c4fe0;
+ transform: translateY(-0.1em);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active {
+ box-shadow: inset 0px 0.1em 0.6em #e061de;
+ transform: translateY(0em);
 }
